--- a/style/_fonts.scss
+++ b/style/_fonts.scss
@@ -4,8 +4,7 @@
   font-style: normal;
   src: local("Manrope"),
     url("../fonts/Manrope-Medium.woff2") format("woff2"),
-    url("../fonts/Manrope-Medium.woff") format("woff"),
-    url("../fonts/Manrope-Medium.eot") format("eot");
+    url("../fonts/Manrope-Medium.woff") format("woff");
   font-display: swap;
 }
 
@@ -15,8 +14,7 @@
   font-style: normal;
   src: local("Manrope"),
     url("../fonts/Manrope-SemiBold.woff2") format("woff2"),
-    url("../fonts/Manrope-SemiBold.woff") format("woff"),
-    url("../fonts/Manrope-SemiBold.eot") format("eot");
+    url("../fonts/Manrope-SemiBold.woff") format("woff");
   font-display: swap;
 }
 
@@ -26,8 +24,7 @@
   font-style: normal;
   src: local("Manrope"),
     url("../fonts/Manrope-Bold.woff2") format("woff2"),
-    url("../fonts/Manrope-Bold.woff") format("woff"),
-    url("../fonts/Manrope-Bold.eot") format("eot");
+    url("../fonts/Manrope-Bold.woff") format("woff");
   font-display: swap;
 }
 
@@ -37,7 +34,6 @@
   font-style: normal;
   src: local("Manrope"),
     url("../fonts/Manrope-ExtraBold.woff2") format("woff2"),
-    url("../fonts/Manrope-ExtraBold.woff") format("woff"),
-    url("../fonts/Manrope-ExtraBold.eot") format("eot");
+    url("../fonts/Manrope-ExtraBold.woff") format("woff");
   font-display: swap;
 }
